--- a/app/main.css
+++ b/app/main.css
@@ -13,7 +13,7 @@ h1 {
   border-bottom: 1px solid black;
   margin: 0 0 30px 0;
   padding: 30px 0;
-  background-color: #eee;
+  background-color: #d7e2fb;
 }
 
 h2 {
@@ -31,8 +31,6 @@ h2 {
   cursor: pointer;
   border: 1px solid #afafd5;
   padding: 8px;
-  color: #56559a;
-  background-color: #c7c7e4;
   text-decoration: none;
 }
 
@@ -69,7 +67,6 @@ table {
     margin-bottom: 50px;
     margin-right: auto;
     margin-left: auto;
-    border: 2px solid black;
 }
 table thead {
     /* head takes the height it requires,
@@ -124,4 +121,21 @@ tr:nth-child(odd) {
   width: 40%;
   text-align: right;
   vertical-align: top;
+}
+
+a {
+  color: #0c3381;
+}
+
+a:hover {
+  color: #7499e2;
+}
+
+.country-img {
+  max-width: 40%;
+  max-height: 100px;
+  padding: 0 50px;
+}
+.ctr-img-cont {
+  margin-bottom: 50px;
 }
